--- a/Contact Me.html
+++ b/Contact Me.html
@@ -8,8 +8,7 @@
     <ul>
       <li>Email: harshilchavada04@gmail.com</li>
       <li>LinkedIn: <a href="https://www.linkedin.com/in/harshil-chavada-6799a621a/">Harshil Chavada</a></li>
-      <li>Address: C-204, Siddhi Vinayak Residency, Nr St. Mary's School, Naroda, Ahmedabad - 382330</li>
-      <li>Phone: 6355732539</li>
+      <li>GitHub: <a href="https://github.com/HarshilNoob">HarshilNoob</a>
     </ul>
     <hr>
     <form class="" action="mailto:harshilchavada04@gmail.com" method="post" enctype="text/plain">
